crates/ferrum-interfaces/tests/ui/vnext/fail/active_sequence_permit_is_not_clone.rs
use ferrum_interfaces::vnext::{ActiveSequencePermit, DeviceRuntime};

fn duplicate<R: DeviceRuntime>(permit: ActiveSequencePermit<'_, '_, R>) {
    let _duplicate = permit.clone();
}

fn main() {}
