crates/ferrum-interfaces/tests/ui/vnext/fail/active_sequence_permit_is_not_clone.stderr
error[E0599]: no method named `clone` found for struct `ActiveSequencePermit<'resources, 'exec, R>` in the current scope
 --> tests/ui/vnext/fail/active_sequence_permit_is_not_clone.rs:4:29
  |
4 |     let _duplicate = permit.clone();
  |                             ^^^^^ method not found in `ActiveSequencePermit<'_, '_, R>`
